fixes production scripts

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "An inclusive community of queers and allies in technology",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
+    "start:dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
