--- a/client/package.json
+++ b/client/package.json
@@ -1,17 +1,49 @@
 {
   "name": "client",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
+    "babel-preset-react": "^6.24.1",
+    "font-awesome": "^4.7.0",
+    "jquery": "3.2.1",
+    "normalize.css": "7.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17"
+    "waypoints": "4.0.1"
+  },
+  "devDependencies": {
+    "ajv": "^5.2.2",
+    "autoprefixer": "^7.1.6",
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.2",
+    "babel-preset-es2015": "6.24.1",
+    "browser-sync": "^2.18.13",
+    "del": "3.0.0",
+    "eslint": "^4.6.1",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.3.0",
+    "gulp": "3.9.1",
+    "gulp-cssnano": "2.1.2",
+    "gulp-imagemin": "4.0.0",
+    "gulp-modernizr": "1.0.0-alpha",
+    "gulp-postcss": "^7.0.0",
+    "gulp-rename": "1.2.2",
+    "gulp-rev": "8.1.0",
+    "gulp-svg-sprite": "^1.3.7",
+    "gulp-svg2png": "2.0.2",
+    "gulp-uglify": "3.0.0",
+    "gulp-usemin": "0.3.28",
+    "gulp-watch": "^4.3.11",
+    "postcss-hexrgba": "1.0.0",
+    "postcss-import": "^11.0.0",
+    "postcss-mixins": "^6.2.0",
+    "postcss-nested": "^2.1.2",
+    "postcss-simple-vars": "^4.1.0",
+    "webpack": "3.8.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  },
-  "proxy": "http://localhost:5000"
+    "start": "gulp watch"
+  } 
 }
