--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,8 @@
     "babel-loader": "7.1.2",
     "babel-preset-es2015": "6.24.1",
     "browser-sync": "^2.18.13",
+    "chai": "^4.1.2",
+    "chai-jquery": "^2.0.0",
     "del": "3.0.0",
     "eslint": "^4.6.1",
     "eslint-config-airbnb": "^15.1.0",
@@ -36,14 +38,16 @@
     "gulp-uglify": "3.0.0",
     "gulp-usemin": "0.3.28",
     "gulp-watch": "^4.3.11",
+    "jsdom": "^11.6.2",
     "postcss-hexrgba": "1.0.0",
     "postcss-import": "^11.0.0",
     "postcss-mixins": "^6.2.0",
     "postcss-nested": "^2.1.2",
     "postcss-simple-vars": "^4.1.0",
+    "react-addons-test-utils": "^15.6.2",
     "webpack": "3.8.1"
   },
   "scripts": {
     "start": "gulp watch"
-  } 
+  }
 }
