--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "babel-preset-react": "^6.24.1",
     "font-awesome": "^4.7.0",
     "jquery": "3.2.1",
+    "node-lyft": "^1.0.3",
     "normalize.css": "7.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
